Add Corpse Controller Integration Tests